--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,10 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-URL: https://github.com/mjpinov/libminer
+URL: https://github.com/mjpinov/libminer, https://mjpinov.github.io/libminer/
 BugReports: https://github.com/mjpinov/libminer/issues
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Imports: 
+    fs
